@@ -1,3 +1,4 @@
+* Use argon2 or scrypt to hash password by default
 * Allow PYSON Expression as key for PYSON In with dict object
 * Add method to format warning name with records
 * Add option to trytond-console to start a readonly transaction
